# MandelbrotSetVisualization

./: CMakeLists.txt  MandelbrotFractal.sln  MandelbrotFractal.vcxproj  MandelbrotFractal.vcxproj.filters  readme.md
HeaderFiles/: DrawingFunctions.h  Simulation.h  Vec2.h
SourceFiles/: DrawingFunctions.cpp  Simulation.cpp  main.cpp
fractal/: build.sh
fractal/doc/doclatex/: Makefile  References.bib  build.sh  main.aux  main.lof  main.lol  main.lot  main.out  main.tex  main.tex.blg  main.toc
fractal/doc/doclatex/config/: config.tex
fractal/doc/doclatex/text/: fractal.tex  part.tex
fractal/src/: model_complexnumber.c  model_mandelbrot.c  model_print.c  model_traverse.c
fractal/test/: test_element.c  test_mandelbrot.c  test_print.c  test_traverse.c  test_window.c
x64/Debug/: MandelbrotFractal.exe.recipe  MandelbrotFractal.ilk  MandelbrotFractal.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/Mandelbr.0af718ae.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MandelbrotFractal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: MandelbrotFractal.exe.recipe  MandelbrotFractal.iobj  MandelbrotFractal.ipdb  MandelbrotFractal.vcxproj.FileListAbsolute.txt
x64/Release/Mandelbr.0af718ae.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MandelbrotFractal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
